# Cuda-Code

./: README.md
CPP/: CMakeLists.txt  README.md  inference.cu  inference.h  main.cpp
Laplace-Equation/: README.md  cpu.cu  cuda.cu  draw_heat_map.py  main.cu
Python-Deployment/: README.md  add_arrays.cu
Python-Deployment/Example/: add_arrays.py
